[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Player.gd" type="Script" id=1]
[ext_resource path="res://src/UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/characterPortrait1.png" type="Texture" id=3]
[ext_resource path="res://SFX/Jump.wav" type="AudioStream" id=4]
[ext_resource path="res://SFX/Step.wav" type="AudioStream" id=5]
[ext_resource path="res://SFX/Click.wav" type="AudioStream" id=6]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 3, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CubeMesh" id=3]
material = SubResource( 4 )
size = Vector3( 2, 6, 2 )

[node name="Player" type="KinematicBody" groups=["interactable"]]
collision_layer = 3
script = ExtResource( 1 )
character_sprite = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 3 )
material/0 = null

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="Camera" type="Camera" parent="Pivot"]
current = true

[node name="RayCast" type="RayCast" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
enabled = true
cast_to = Vector3( 0, 0, -8 )
collision_mask = 2

[node name="UI" parent="." instance=ExtResource( 2 )]

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="WalkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 10.488

[node name="WalkSoundTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="timeout" from="WalkSoundTimer" to="." method="_on_WalkSoundTimer_timeout"]
