[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/UI.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/CharacterPortrait2.png" type="Texture" id=3]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 3, 1 )

[sub_resource type="SpatialMaterial" id=4]

[sub_resource type="CubeMesh" id=3]
material = SubResource( 4 )
size = Vector3( 2, 6, 2 )

[sub_resource type="CubeMesh" id=6]
size = Vector3( 2, 3, 2 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 1, 1.5, 1 )

[node name="Player2" type="KinematicBody" groups=["interactable"]]
script = ExtResource( 2 )
character_sprite = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 3 )
material/0 = null

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="Camera" type="Camera" parent="Pivot"]
current = true

[node name="RayCast" type="RayCast" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
enabled = true
cast_to = Vector3( 0, 0, -8 )

[node name="UI" parent="." instance=ExtResource( 1 )]

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.48516, 0 )
visible = false
mesh = SubResource( 6 )
material/0 = null

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0 )
shape = SubResource( 5 )
disabled = true
